Attempt at preventing content shifts...

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -13,6 +13,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center; 
     margin: 0 5px;
     width: auto;
     max-width: 100%;
